# lc3-ensemble

./: .gitignore  Cargo.toml  README.md  changelog.md
ensemble-cli/: Cargo.toml  main.rs
ensemble-test/: Cargo.toml  README.md  ensemble_test.pyi
ensemble-test/ensemble_test/: ensemble_test.pyi
ensemble-test/ensemble_test/autograder/: __init__.py  test_autograder.py
ensemble-test/src/: lib.rs
src/: asm.rs  ast.rs  err.rs  lib.rs  os.asm  parse.rs  sim.rs
src/asm/: encoding.rs
src/ast/: asm.rs  sim.rs
src/parse/: lex.rs
src/sim/: debug.rs  device.rs  frame.rs  io.rs  mem.rs  observer.rs
src/sim/device/: display.rs  keyboard.rs  timer.rs
